import "google/protobuf/descriptor.proto";


// Email from liujisi@google.com on 10.02.2012: Feel free to use 1012 for all types of options.
//--------------------------------
//Project:  Dynamic Compact Control Language
//Contact:  Toby Schneider <tes@mit.edu>
//Web site: https://launchpad.net/dccl
//Extensions: 1012 (all types)
//--------------------------------
package dccl;


extend .google.protobuf.FieldOptions
{
  optional DCCLFieldOptions field = 1012;
}

extend .google.protobuf.MessageOptions
{
  optional DCCLMessageOptions msg = 1012;
}


message DCCLFieldOptions
{
  // what encoder / decoder should we use?
  optional string codec = 1 ;//[default = "_default"];
  // leave this field out of DCCL transmissions (has_field() will be false on receipt)
  optional bool omit = 2 [default = false];
  // set true for fields in the header (will *not* be encrypte)d
  optional bool in_head = 3 [default = false];
  
  
  // double, float
  optional int32 precision = 4 [default = 0];
  // int, double, float
  optional double min = 5 [default = 0];
  optional double max = 6 [default = 0];

  // static
  optional string static_value = 8 [default = ""];
  
  // string, bytes
  optional uint32 max_length = 9 [default = 0];  

  // any `repeated` field
  optional uint32 max_repeat = 10 [default = 1];


  message LegacyCCLFieldOptions
  {
    optional uint32 thrust_mode_tag = 1;
    optional uint32 bit_size = 2;
  }
  optional LegacyCCLFieldOptions ccl = 100;

  message ArithmeticOptions
  {
    required string model = 1;
    optional bool debug_assert = 2 [default = false];
  }
  optional ArithmeticOptions arithmetic = 200;
  
  extensions 10000 to max;
}


message DCCLMessageOptions
{
  required int32 id = 1;
  required uint32 max_bytes = 2;

  optional string codec = 3; // [default = "_default"];
}

