import "dccl/protobuf/option_extensions.proto";

message CustomMsg
{
    option (dccl.msg).id = 3;
    option (dccl.msg).max_bytes = 256;
    option (dccl.msg).codec = "custom_codec";

    optional uint32 a = 1;
    optional bool b = 2;
}

message CustomMsg2
{
    option (dccl.msg).id = 4;
    option (dccl.msg).max_bytes = 256;

    optional CustomMsg msg = 1;
    repeated int32 c = 3 [
        (dccl.field).max = 100,
        (dccl.field).min = 0,
        (dccl.field).max_repeat = 4,
        (dccl.field).codec = "int32_test_codec"
    ];
}
